Don't eat WinTab Proximity packets from the WinTab's queue!

Qt also needs these packets to issue the Enter/Leave events. So
just use the *Peek variant of the function instead of *Get.

BUG:326441